add google verify

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,4 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+<meta name="google-site-verification" content="LPRtp4vAI5vqaNqDVc5sHMv9A3zyi2QKD6fFURHmwPU" />
